smth goes wrong..

--- a/data/config.json
+++ b/data/config.json
@@ -6,11 +6,7 @@
 			"login" : "admin",
 			"password" : "password",
 			"monitoring_interface" : "wlan0",
-<<<<<<< HEAD
 			"radio_map" : "/home/tester/projects/WiFi-Trilateration/data/ap0_map.csv"
-=======
-			"radio_map" : "/home/tester/WiFi-Trilateration/data/ap0_map.csv"
->>>>>>> 539d98fcefe24ff052d8569af2e750e995f9df1e
 		},
 		{
 			"ip_address" : "172.16.10.55",
@@ -18,11 +14,7 @@
 			"login" : "admin",
 			"password" : "password",
 			"monitoring_interface" : "wlan0",
-<<<<<<< HEAD
 			"radio_map" : "/home/tester/projects/WiFi-Trilateration/data/ap1_map.csv"
-=======
-			"radio_map" : "/home/tester/WiFi-Trilateration/data/ap1_map.csv"
->>>>>>> 539d98fcefe24ff052d8569af2e750e995f9df1e
 		},
 		{
 			"ip_address" : "172.16.10.51",
@@ -30,22 +22,16 @@
 			"login" : "admin",
 			"password" : "password",
 			"monitoring_interface" : "wlan0",
-<<<<<<< HEAD
 			"radio_map" : "/home/tester/projects/WiFi-Trilateration/data/ap2_map.csv"
-=======
-			"radio_map" : "/home/tester/WiFi-Trilateration/data/ap2_map.csv"
->>>>>>> 539d98fcefe24ff052d8569af2e750e995f9df1e
-                }
+    }
 	],
 	"monitoring_properties" : {
 		"users" : {
-<<<<<<< HEAD
 			"80:ad:16:46:41:53" : "tester1",
-			"f4:f5:db:2d:b5:16" : "tester2"
-=======
-			"e4:92:fb:ae:76:53" : "Maxim",
-                        "dc:f7:56:63:14:88" : "Vadim"
->>>>>>> 539d98fcefe24ff052d8569af2e750e995f9df1e
+			"f4:f5:db:2d:b5:16" : "tester2",
+			"60:ab:67:fe:d1:c5" : "tester3",
+			"94:e9:79:d4:4a:31" : "tester4",
+			"88:36:5f:a5:6b:5c" : "tester5"
 		},
 		"poll_interval" : 3
 	}
