--- a/data/config.json
+++ b/data/config.json
@@ -6,7 +6,7 @@
 			"login" : "admin",
 			"password" : "password",
 			"monitoring_interface" : "wlan0",
-			"radio_map" : "/home/tester/projects/WiFi-Trilateration/data/ap0_map.csv"
+			"radio_map" : "/home/archie/SibSUTIS/WiFi-Trilateration/data/ap0_map.csv"
 		},
 		{
 			"ip_address" : "172.16.10.55",
@@ -14,7 +14,7 @@
 			"login" : "admin",
 			"password" : "password",
 			"monitoring_interface" : "wlan0",
-			"radio_map" : "/home/tester/projects/WiFi-Trilateration/data/ap1_map.csv"
+			"radio_map" : "/home/archie/SibSUTIS/WiFi-Trilateration/data/ap1_map.csv"
 		},
 		{
 			"ip_address" : "172.16.10.51",
@@ -22,16 +22,12 @@
 			"login" : "admin",
 			"password" : "password",
 			"monitoring_interface" : "wlan0",
-			"radio_map" : "/home/tester/projects/WiFi-Trilateration/data/ap2_map.csv"
+			"radio_map" : "/home/archie/SibSUTIS/WiFi-Trilateration/data/ap2_map.csv"
     }
 	],
 	"monitoring_properties" : {
 		"users" : {
-			"80:ad:16:46:41:53" : "tester1",
-			"f4:f5:db:2d:b5:16" : "tester2",
-			"60:ab:67:fe:d1:c5" : "tester3",
-			"94:e9:79:d4:4a:31" : "tester4",
-			"88:36:5f:a5:6b:5c" : "tester5"
+			"60:ab:67:fe:d1:c5" : "agent"
 		},
 		"poll_interval" : 3
 	}
